Updates globe plot.

--- a/ufc_plots_2.ipynb
+++ b/ufc_plots_2.ipynb
@@ -522,7 +522,7 @@
    "id": "12ff9085-c534-4eab-b1e2-1a47c8f135d0",
    "metadata": {},
    "source": [
-    "<font size=\"5\">Bring in active fighters country DataFrame, obtained from ufc_stats_4.6 file.</font>"
+    "<font size=\"5\">Bring in active fighters country DataFrame, obtained from ufc_stats_4.5.py file.</font>"
    ]
   },
   {
